--- a/paper/content/conclusion.tex
+++ b/paper/content/conclusion.tex
@@ -1,1 +1,18 @@
 % !TeX root = ../paper_observer_consciousness.tex
+
+Wie schon im Allgemeinen ergeben sich auch in der Physik Problem eine Definition für Bewusstsein zu finden,
+wobei in letzterer selbst eine allgemeine Definition für einen Beobachter fehlt. Es kann also vermutet werden,
+dass eine mögliche einheitliche Definition für Beobachter das Bewusstsein in irgendeiner Weise einschließen 
+könnte.
+
+Bei der Auffassung des Beobachters als Teilsystem ergeben sich strikte Bedingungen an die Wechselwirkungsterme
+mit Objekt und Umwelt, die dafür Sorge zu tragen haben, dass Korrelationen zu ausgewählten Eigenschaften der
+Umgebung konstant bleiben. 
+Ferner zeigte die Berechnung der Dekohärenz-Zeitskalen von Neuronen, dass diese und damit auch sämtliche Gehirnprozesse
+als klassische zu beschreiben sind, da jegliche Superpositionen noch bei der Entstehung zerstört werden.
+
+Die Betrachtung von notwendigen Eigenschaften bewusster Materie zeigt, dass obwohl Integrierte Information
+und Unabhängigkeit sinnvolle Vertreter dieser Eigenschaften sind diese beiden allen noch nicht ausreichend
+sind, um bewusste Materie vollständig zu beschreiben. 
+
+
