--- a/paper/content/decoherence_brain.tex
+++ b/paper/content/decoherence_brain.tex
@@ -1,5 +1,13 @@
 % !TeX root = ../paper_observer_consciousness.tex
 
+
+
+\begin{wrapfigure}{r}{0.4\textwidth}
+	\centering
+	\includegraphics[scale=0.2]{graphics/neuron_schematic.jpg}
+	\caption{Schematische Darstellung einer Nervenzelle. Hervorgehoben sind die Größen, die für die Abschätzung der 
+		Anzahl der Na$^{+}$-Ionen verwendet werden, die sich in Superposition befinden.\cite{Tegmark_99} \label{fig:neuron}}
+\end{wrapfigure}
 Ein Gehirnprozess in dem quantenmechanische Superpositionen denkbar sind
 die Aktivität von Neuronen, den Grundbausteinen der Informationsverarbeitung im 
 Gehirn. Das komplexe Netzwerk aus $\sim \num{e11}$ Neuronen kann auch durch
@@ -27,12 +35,6 @@ die Ausmaße einer Nervenzelle zu
 		N = \frac{\pi dLf\epsilon_{0}}{qh}\del{U_{1} - U_{0}} \approx \num{e6}.
 \end{empheq}
 
-\begin{figure}
-	\centering
-	\includegraphics[scale=0.4]{graphics/neuron_schematic.jpg}
-	\caption{Schematische Darstellung einer Nervenzelle. Hervorgehoben sind die Größen, die für die Abschätzung der 
-		Anzahl der Na$^{+}$-Ionen verwendet werden, die sich in Superposition befinden.\cite{Tegmark_99} \label{fig:neuron}}
-\end{figure}
 
 Für die Abschätzung der Größenordnung der Dekohärenz-Zeitskala werden die drei am häufigsten auftretenden
 Wechselwirkungen mit der Umgebung
@@ -48,7 +50,8 @@ und nicht von dem Zustand des Ions abhängt. Eine detailliert Betrachtung der Be
 ist in \cite{Tegmark_99} zu finden. 
 Als Dekohärenz-Zeitskalen für die drei betrachteten Wechselwirkungen ergeben sich die in 
 \cref{tab:decoherence_time} dargestellten.
-\begin{table}
+
+\begin{wraptable}{r}{0.38\textwidth}
 	\centering
 	\begin{tabular}{lc}
 		\toprule
@@ -61,7 +64,7 @@ Als Dekohärenz-Zeitskalen für die drei betrachteten Wechselwirkungen ergeben s
 	\end{tabular}
 	\caption{Zeitskalen der Dekohärenz aufgrund der betrachteten Wechselwirkungen der Na$^{+}$-Ionen
 		in Superposition. Abgewandelt aus: \cite{Tegmark_99} \label{tab:decoherence_time}}
-\end{table}
+\end{wraptable}
 
 Es zeigt sich als das Superpositionen von Neuronen, wie sie hier betrachtet wurde auf Zeitskalen der 
 Größenordnung \SI{e-20}{s} zerstört werden. Verglichen mit den typischen Dynamik-Zeitskalen, die für 
