--- a/paper/content/observer_subsystem.tex
+++ b/paper/content/observer_subsystem.tex
@@ -58,7 +58,8 @@ Nebendiagonalelemente der Dichtematrix unterdrückt werden und man den Zustand
 \begin{empheq}{equation}
  \rho^{\prime}_{\mathrm{O}} = \frac{1}{2}\del{\ketup\braup + \ketdown\bradown}
 \end{empheq}
-erhält. Die Messung des Subjekts an Objekt sei in der Art, dass die neutrale Stimmung $\ketneutrey$ des Beobachters bei Beobachtung eines $\ketup$ zu $\ketsmiley$ und bei Beobachtung  von $\ketdown$ zu $\ketfrowny$ übergeht.
+erhält. 
+Die Messung des Subjekts an Objekt sei in der Art, dass die neutrale Stimmung $\ketneutrey$ des Beobachters bei Beobachtung eines $\ketup$ zu $\ketsmiley$ und bei Beobachtung  von $\ketdown$ zu $\ketfrowny$ übergeht.
 Formal lassen sich diese Annahmen mit $U\ketneutreyup = \ketsmileyup$ und $U\ketneutreydown = \ketfrownydown$ beschreiben, wobei $U$ die Zeitentwicklung in Abhängigkeit von $H_{\mathrm{OS}}$ darstellt.
 Bei der Beobachtung des Zustands  $\rho^{\prime}_{\mathrm{O}}$ durch einen anfangs neutralen Beobachter ergibt sich 
 entsprechend
