--- a/paper/paper_observer_consciousness.tex
+++ b/paper/paper_observer_consciousness.tex
@@ -1,6 +1,6 @@
 \input{preamble}
 %TODO PAGESYLE!!!
-\pagestyle{empty}
+%\pagestyle{empty}
 \newcommand{\Quote}[1]{\enquote{\emph{#1}}}
 \begin{document}
 	\input{content/abstract}
@@ -20,7 +20,7 @@
 		%\input{content/dynamic_autonomy}
 	\section{Schlussbetrachtung}
 	\input{content/conclusion}
-	
-	\section{Literatur}
+	\newpage
+	\nocite{Zeh_00}
 	\printbibliography
 \end{document}
