--- a/paper/preamble.tex
+++ b/paper/preamble.tex
@@ -62,9 +62,9 @@
                                                             
 % Angabe Mitte-Oben
 %\chead{}  
-
+\lhead{\textbf{Beobacher und Bewusstsein}\\Joshua Luckey}
 % Angabe Rechts-Oben                                                                         
-\rhead{\today}  
+\rhead{Seminar: Quantenmechanik\\ und Messprozess}  
 
 % Angabe Links-Unten                                                                    
 %\lfoot{}        
@@ -165,7 +165,7 @@
 \usepackage{adjustbox}
 
 % Bearbeiten von Bild-/Tabellenunterschriften
-\usepackage[font=small,labelfont=bf]{caption}
+\usepackage[font=small,labelfont=bf, format=plain]{caption}
 
 % Seiten im Querformat mit \begin{landscape}...\end{landscape} 
 \usepackage{pdflscape}
@@ -303,6 +303,6 @@
 \hypersetup{hidelinks}
 
 %Verbesserte Referenzen
-\usepackage[german,noabbrev]{cleveref}
+\usepackage[german]{cleveref}
 
 
