--- a/paper/content/abstract.tex
+++ b/paper/content/abstract.tex
@@ -1,1 +1,9 @@
 % !TeX root = ../paper_observer_consciousness.tex
+\begin{center}
+	\parbox{0.8\textwidth}{Im Folgenden sollen die Grundzüge der physikalischen Beschreibung von Beobachtern und
+		dem Bewusstsein  betrachtet werden. Dabei wird zunächst auf die Problem der 
+		Definitionen eingegangen, um dann theoretische Modelle zu betrachten, die die
+		Möglichkeiten zur Beschreibung eines Beobachters als Teilsystem und der Eigenschaften 
+		von bewusster Materie bieten. Ferner wird durch Berechnung der Dekohärenz-Zeitskalen 
+		von Gehirnprozessen argumentiert, dass diese als klassisch zu behandeln sind.}
+\end{center}
