--- a/paper/content/independence.tex
+++ b/paper/content/independence.tex
@@ -38,7 +38,8 @@ durch geführt werden muss.
 Dies führt dazu das selbst der Zustand (4) in \cref{fig:independence_plot}, einer der vier maximal verschränkten 
 Bell-Zustände, in einen reinen Zustand transformiert werden kann, sodass für diesen $\Phi= 0$ gilt.
 Die für Quantenzustände maximal mögliche Integrierte Information kann für ein System der betrachteten
-Größe zu $\Phi = \num{0.2516}$ bit bestimmt werden. Und auch für größere System zeigt sich, dass
+Größe zu $\Phi = \num{0.2516}$ bit bestimmt werden. Dieser Wert ist als grauer Punkt in \cref{fig:independence_plot} 
+eingezeichnet. Und auch für größere System zeigt sich, dass
 $\Phi$ für klassische Systeme annähernd linear mit der Systemgröße steigt während $\Phi$ für Quantensystem 
 gegen null geht. Damit zeigt sich das Zustände von Quantensystemen im Vergleich zu klassischen Zuständen wesentlich 
 unabhängiger sind.
