--- a/paper/content/conclusion.tex
+++ b/paper/content/conclusion.tex
@@ -12,7 +12,6 @@ Ferner zeigte die Berechnung der Dekohärenz-Zeitskalen von Neuronen, dass diese
 als klassische zu beschreiben sind, da jegliche Superpositionen noch bei der Entstehung zerstört werden.
 
 Die Betrachtung von notwendigen Eigenschaften bewusster Materie zeigt, dass obwohl Integrierte Information
-und Unabhängigkeit sinnvolle Vertreter dieser Eigenschaften sind diese beiden allen noch nicht ausreichend
-sind, um bewusste Materie vollständig zu beschreiben. 
+und Unabhängigkeit sinnvolle Vertreter dieser Eigenschaften sind, diese beiden allen noch nicht ausreichen bewusste Materie vollständig zu beschreiben. 
 
 
