--- a/paper/content/consciousness_statematter.tex
+++ b/paper/content/consciousness_statematter.tex
@@ -1,12 +1,12 @@
 % !TeX root = ../paper_observer_consciousness.tex
 
-Die bekannten Aggregatzustände lassen sich durch die Unterschiede in ihren Eigenschaften einteilen,
-so haben Festkörper eine quasi-unendliche Viskosität. Alle übrigen Stoffe zeigen weiter Unterschiede,
+Die bekannten Aggregatzustände lassen sich durch die Unterschiede in ihren Eigenschaften einteilen.
+Beispielsweise haben Festkörper eine quasi-unendliche Viskosität. Alle übrigen Stoffe zeigen weiter Unterschiede,
 beispielsweise sind Flüssigkeiten weniger kompressible und Gase und Plasmen lassen sich durch ihr
 Leitfähigkeit unterscheiden. 
 
 In analoger Form lässt sich nun die Frage nach den Eigenschaften stellen, die Materie haben muss, 
 die bewusst ist. Ähnliche Überlegungen wurden bereits angestellt, um festzustellen welche Eigenschaften 
-\emph{computronium} haben muss, ein Zustand von Materie der \enquote{berechnen} kann.
+\emph{computronium} haben muss, Materie die \enquote{berechnen} kann.
 Zwei mögliche Eigenschaften von bewusster Materie, Integrierte Information und Unabhängigkeit werden im 
 folgenden erläutert.
