--- a/paper/content/decoherence_brain.tex
+++ b/paper/content/decoherence_brain.tex
@@ -8,23 +8,23 @@
 	\caption{Schematische Darstellung einer Nervenzelle. Hervorgehoben sind die Größen, die für die Abschätzung der 
 		Anzahl der Na$^{+}$-Ionen verwendet werden, die sich in Superposition befinden.\cite{Tegmark_99} \label{fig:neuron}}
 \end{wrapfigure}
-Ein Gehirnprozess in dem quantenmechanische Superpositionen denkbar sind
+Ein Gehirnprozess in dem quantenmechanische Superpositionen denkbar ist
 die Aktivität von Neuronen, den Grundbausteinen der Informationsverarbeitung im 
 Gehirn. Das komplexe Netzwerk aus $\sim \num{e11}$ Neuronen kann auch durch
 Forschungsergebnisse anderer Wissenschaften mit dem Bewusstsein in Zusammenhang
-gebracht werden. 
+gebracht werden.\,\cite{Koch_16}
 
 Eine schematische Darstellung einer Nervenzelle ist in \cref{fig:neuron} gezeigt.
-Auf das, für diese Betrachtung, Notwendigste reduziert stellen Neuronen im Prinzip
+Auf das, für diese Betrachtung, Notwendigste reduziert, stellen Neuronen
 ein System mit zwei möglichen Zuständen dar, die feuern (aktiv) und 
 nicht-feuern (passiv) genannt werden. Der Zustand ist dabei von der Konzentration
-von Na$^{+}$-Ionen im Inneren der Nervenzelle abhängig, bei hohen Konzentrationen
-feuert die Nervenzelle bei niedrigen nicht. Eine Superposition zwischen einer 
+von Na$^{+}$-Ionen im Inneren der Nervenzelle abhängig. Bei hohen Konzentrationen
+feuert die Nervenzelle, bei niedrigen nicht. Eine Superposition zwischen einer 
 feuernden und nicht-feuernden Nervenzelle lässt sich demnach vereinfacht als räumliche 
 Superposition von Na$^{+}$-Ionen annehmen. Die räumliche Trennung dieser beiden Orte 
 ist dabei von der Größenordnung der Zellwände $h \sim \SI{10}{\nano\meter}$.
 
-Um nun Aussagen über die Dekohärenz-Zeitskalen machen zu können muss zunächst 
+Um nun Aussagen über die Dekohärenz-Zeitskala machen zu können muss zunächst 
 die Anzahl der Ionen bestimmt werden, die sich gleichzeitig in Superposition befinden.
 Diese Anzahl wird über eine einfache Abschätzung der Ladungsverteilung in der Nervenzelle
 ermittelt. Im feuernden Zustand beträgt die Potentialdifferenz zwischen dem Inneren und Äußeren
