--- a/paper/content/independence.tex
+++ b/paper/content/independence.tex
@@ -40,7 +40,7 @@ Bell-Zustände, in einen reinen Zustand transformiert werden kann, sodass für d
 Die für Quantenzustände maximal mögliche Integrierte Information kann für ein System der betrachteten
 Größe zu $\Phi = \num{0.2516}$ bit bestimmt werden. Dieser Wert ist als grauer Punkt in \cref{fig:independence_plot} 
 eingezeichnet. Und auch für größere System zeigt sich, dass
-$\Phi$ für klassische Systeme annähernd linear mit der Systemgröße steigt während $\Phi$ für Quantensystem 
+$\Phi$ für klassische Systeme annähernd linear mit der Systemgröße steigt während $\Phi$ für Quantensysteme 
 gegen null geht. Damit zeigt sich das Zustände von Quantensystemen im Vergleich zu klassischen Zuständen wesentlich 
 unabhängiger sind.
 
@@ -51,8 +51,8 @@ der allgemein in drei Teile separiert werden kann
 \end{empheq}
 so ist leicht zu verstehen, dass diese am geringsten ist, wenn der Wechselwirkungsterm $H_3$ minimal wird.
 Wird eine solche Separation gefunden gilt, da $H_1$ und $H_2$ näherungsweise unabhängig sind, dass 
-$\comm{H_i}{H_j} = 0$ und $\comm{H_i}{H_3} = 0$ für $i,j \in {1,2}$. Das Vertauschen des System Hamiltonoperators
-mit dem Wechselwirkungsterm führt nun aber dazu, dass Zustände durch die Dekohärenz in einen zeitunabhängigen
+$\comm{H_i}{H_j} = 0$ und $\comm{H_i}{H_3} = 0$ für $i,j \in {1,2}$. Das Vertauschen des System-Hamiltonoperators
+mit dem Wechselwirkungsterm führt nun aber dazu, dass Zustände durch Dekohärenz in einen zeitunabhängigen
 Zustand getrieben werden. Trennt man das Universum also in möglichst unabhängige Teile auf, so kommt jegliche 
 Veränderung zum erliegen.     
 
