--- a/paper/content/observer_subsystem.tex
+++ b/paper/content/observer_subsystem.tex
@@ -17,7 +17,7 @@ aller Teilchen einschließt aus denen Beobachter und Messgerät bestehen, wird a
 (E) beschrieben.
 
 Durch die Einteilung in drei Teilsysteme ergibt sich im allgemeinen Fall ein komplexer Wechselwirkungsterm,
-der aus den Wechselwirkungen von jeweils zweien der Teilsysteme miteinander und einem Term besteht, der
+der aus den drei Wechselwirkungen von jeweils zwei der Teilsysteme miteinander und einem vierten Term besteht, der
 die Wechselwirkung aller drei Teilsysteme beschreibt, für den jedoch im Folgenden $H_{\mathrm{OES}} = 0$
 angenommen wird. 
 Die drei übrigen Wechselwirkungsterme lassen sich mit bekannten Wechselwirkungen identifizieren. So beschreiben
@@ -32,8 +32,9 @@ zu vergangenen Zuständen möglich sein, da wir als menschliche Beobachter die F
 die Vergangenheit zu erinnern.
 
 Um die Wirkung der einzelnen Wechselwirkungsterme zu verdeutlichen ist im Folgenden ein Beispiel
-aus\,\cite{Tegmark_15_long} gegeben. Betrachtet wird hierbei die reduzierte Dichtematrix $\rho_{\mathrm{OS}}$
-eines Systems in denen sowohl das Objekt als auch das Subjekt nur einen Freiheitsgrad mit den jeweiligen 
+aus\,\cite{Tegmark_15_long} gegeben. Betrachtet wird hierbei 
+%die reduzierte Dichtematrix $\rho_{\mathrm{OS}}$
+ein Systems in denen sowohl das Objekt als auch das Subjekt nur einen Freiheitsgrad mit den jeweiligen 
 Zuständen 
 \begin{empheq}{align}
 	\text{Subjekt}&: \ketsmiley, \ketneutrey, \ketfrowny\\
@@ -43,7 +44,7 @@ besitzen. Aus denen sich die 6 Basiszustände
 \begin{empheq}{equation}
 	\ketsmileyup, \ketsmileydown,\ketneutreyup, \ketneutreydown,\ketfrownyup, \ketfrownydown
 \end{empheq}
-für das verbundene System ergeben. Für den Anfangszustand wird die Dichtematrix $\rho_{\mathrm{OS}}~=~  \ketneutreyup\braneutreyup$ angenommen. Der Term $H_{\mathrm{O}}$ beschreibt nun die Zeitentwicklung des
+für das verbundene System aus ergeben. Für den Anfangszustand wird die Dichtematrix $\rho_{\mathrm{OS}}~=~  \ketneutreyup\braneutreyup$ angenommen. Der Term $H_{\mathrm{O}}$ beschreibt nun die Zeitentwicklung des
 Objekts für die folgendes angenommen werden soll.
 \begin{empheq}{equation}
 	U\ketup = \exp(-iH_{\mathrm{O}}t)\ketup = \frac{1}{\sqrt{2}}\del{\ketup + \ketdown}
@@ -59,7 +60,7 @@ Nebendiagonalelemente der Dichtematrix unterdrückt werden und man den Zustand
  \rho^{\prime}_{\mathrm{O}} = \frac{1}{2}\del{\ketup\braup + \ketdown\bradown}
 \end{empheq}
 erhält. 
-Die Messung des Subjekts an Objekt sei in der Art, dass die neutrale Stimmung $\ketneutrey$ des Beobachters bei Beobachtung eines $\ketup$ zu $\ketsmiley$ und bei Beobachtung  von $\ketdown$ zu $\ketfrowny$ übergeht.
+Die Messung des Subjekts am Objekt sei in der Art, dass die neutrale Stimmung $\ketneutrey$ des Beobachters bei Beobachtung eines $\ketup$ zu $\ketsmiley$ und bei Beobachtung  von $\ketdown$ zu $\ketfrowny$ übergeht.
 Formal lassen sich diese Annahmen mit $U\ketneutreyup = \ketsmileyup$ und $U\ketneutreydown = \ketfrownydown$ beschreiben, wobei $U$ die Zeitentwicklung in Abhängigkeit von $H_{\mathrm{OS}}$ darstellt.
 Bei der Beobachtung des Zustands  $\rho^{\prime}_{\mathrm{O}}$ durch einen anfangs neutralen Beobachter ergibt sich 
 entsprechend
