--- a/paper/preamble.tex
+++ b/paper/preamble.tex
@@ -64,7 +64,7 @@
 %\chead{}  
 \lhead{\textbf{Beobacher und Bewusstsein}\\Joshua Luckey}
 % Angabe Rechts-Oben                                                                         
-\rhead{Seminar: Quantenmechanik\\ und Messprozess}  
+\rhead{Seminar: Quantenmechanik  und\\ Messprozess (Prof. H. Päs)}  
 
 % Angabe Links-Unten                                                                    
 %\lfoot{}        
