--- a/paper/paper_observer_consciousness.tex
+++ b/paper/paper_observer_consciousness.tex
@@ -1,4 +1,5 @@
 \input{preamble}
+\DefineBibliographyStrings{ngerman}{andothers = {et\,al\adddot}} 
 %TODO PAGESYLE!!!
 %\pagestyle{empty}
 \newcommand{\Quote}[1]{\enquote{\emph{#1}}}
@@ -21,6 +22,6 @@
 	\section{Schlussbetrachtung}
 	\input{content/conclusion}
 	\newpage
-	\nocite{Zeh_00}
+	\nocite{Tegmark_15_short,Zeh_00}
 	\printbibliography
 \end{document}
